Fix overflow whoopsie

--- a/packages/docs/src/scss/components/_nav.scss
+++ b/packages/docs/src/scss/components/_nav.scss
@@ -1,7 +1,7 @@
 .nav {
   &__list {
     overflow-x: auto;
-    -webkit-overflow-scrolling: auto;
+    -webkit-overflow-scrolling: touch;
     -ms-overflow-style: none;
 
     &::-webkit-scrollbar {
